--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     margin: auto;
     font-family: 'SulphurPoint-Bold';
     font-size: 16px;
-    width: auto;
+    width: 100%;
 }
 header{
     position: fixed;
